Fixed overflow bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,6 +69,7 @@ html, body {
 #background {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .option-container {
